--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Battleship</title> <meta charset="utf-8">
+  <meta charset="utf-8">
+  <title>Battleship</title>
+  <link rel="stylesheet" href="battleship.css"/>
 </head>
 <body>
-  <h1>Play battleship!</h1>
+  <main id="board">
+
+  </main>
   <script src="battleship.js"></script>
 </body>
 </html>
