--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <input type="button" id="fireButton" value="Fire!">
     </form>
   </main>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="battleship.js"></script>
 </body>
 </html>
